--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -1124,6 +1124,16 @@ year = {2018}
   publisher={Elsevier}
 }
 
+@article{wedel2018,
+  title={The phonetic specificity of contrastive hyperarticulation in natural speech},
+  author={Wedel, Andrew and Nelson, Noah and Sharp, Rebecca},
+  journal={Journal of Memory and Language},
+  volume={100},
+  pages={61--88},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @inproceedings{weirich2019,
   title={The phonetics of gender in Swedish and German},
   author={Weirich, Melanie and Simpson, Adrian P and {\"O}jbro, Jasmine and Ericsdotter Nordgren, Christine},
@@ -1151,6 +1161,19 @@ year = {2018}
   urldate = {2023-05-17},
   abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
   collaborator = {Open Science Framework}
+}
+
+@article{xie-jaeger2020,
+  title = {Comparing Non-Native and Native Speech: {{Are L2}} Productions More Variable?},
+  author = {Xie, Xin and Jaeger, T Florian},
+  year = {2020},
+  month = may,
+  journal = {The Journal of the Acoustical Society of America},
+  volume = {147},
+  number = {5},
+  pages = {3322--3347},
+  issn = {0001-4966},
+  doi = {10.1121/10.0001141}
 }
 
 @article{young2021,
